# oxide-hv

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/engine/: Cargo.toml
crates/engine/benches/: scheduler_bench.rs
crates/engine/src/: autoscaler.rs  cluster.rs  events.rs  host.rs  lib.rs  metrics.rs  migration.rs  scheduler.rs  vm.rs
crates/engine/tests/: cluster_integration.rs  proptest_invariants.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
scripts/: wasm-pkg.sh
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx
web/components/: Dashboard.tsx  EventLog.tsx  HostGrid.tsx  MetricsBar.tsx
web/lib/: types.ts  wasm.ts
web/public/pkg/: .source-hash  oxide_wasm.d.ts  oxide_wasm.js  oxide_wasm_bg.wasm  oxide_wasm_bg.wasm.d.ts  package.json
