[package]
name = "oxide-engine"
description = "Deterministic simulation engine for a NUMA-aware hypervisor scheduler: VM placement, live migration, GPU/NVMe device virtualization, and elastic autoscaling."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1"
rayon = "1"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scheduler_bench"
harness = false

[lib]
name = "oxide_engine"
path = "src/lib.rs"
